--- a/nomad development book club/1st: Clean code by robert c. martin/D01.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D01.md
@@ -3,9 +3,9 @@
 ## TL; DR
 
 ```markdown
-구동되는 코드도 중요하지만 이를 읽기 좋게 만드는 것도 중요하다
-관례를 따르고 누구나 예상하는 위치에 적절한 명명법을 사용해 코드를 작성하자
-무수한 관심 끝에 좋은 품질의 코드(제품)이 기다린다
+- 구동되는 코드도 중요하지만 이를 읽기 좋게 만드는 것도 중요하다
+- 관례를 따르고 누구나 예상하는 위치에 적절한 명명법을 사용해 코드를 작성하자
+- 무수한 관심 끝에 좋은 품질의 코드(제품)이 기다린다
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
