노개북 4일차

--- a/nomad development book club/1st: Clean code by robert c. martin/D04.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D04.md
@@ -3,23 +3,37 @@
 ## TL; DR
 
 ```markdown
-
+- 내가 짠 코드를 다른사람들도 읽기 편하도록 명로한 이름을 짓자
+- 이름이 긴 것을 두려워하지 말자. 하지만 발음하기 어려운 이름은 되도록 피하자
+- 프로그래머에게 특수한 의미의 단어는 피하자(ex. List)
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
 
 ```markdown
+- 의도가 분명하게 이름을 지으라
+- 코드를 읽고 이해하기 힘든 것은 코드의 단순성이 문제가 아니라 코드의 함축성이다
+- 프로그래머에게 특수한 의미가 있는 단어는 피하자(ex. List)
+- 서로 흡사한 이름을 사용하지 않도록 주의한다
+- 일관성이 떨어지는 표기법은 그릇된 정보다
+- 발음하기 쉬운 이름은 중요하다. 프로그래밍은 사회 활동이기 때문이다
+- 이름 길이는 범위 크기에 비례해야 한다
 
 ```
 
 ### 오늘 읽은 소감은? 떠오르는 생각을 가볍게 적어보세요
 
 ```markdown
-
+이름짓기는 항상 나에게 시간을 뺏어간다
+조금 과장을 하자면 아이의 이름을 짓듯이 고민을 하다가 결국 대충짓는 경우가 많았는데
+이제는 왜 대충지으면 안되는지 이유를 명확하게 알듯하다
+내가 작성한 코드는 적어도 1명이상의 독자가 있다
+항상 포함되는 이 한명은 미래의 나다
+미래의 나를 위해서라도 명료한 이름을 지어주도록 하자
 ```
 
 ### 궁금한 내용이 있거나, 잘 이해되지 않는 내용이 있다면 적어보세요
 
 ```markdown
-
+- interface class, concrete class가 무엇인지?
 ```
