노개북 5일차

--- a/nomad development book club/1st: Clean code by robert c. martin/D05.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D05.md
@@ -3,25 +3,32 @@
 ## TL; DR
 
 ```markdown
-- 
-- 
-- 
+- 클래스, 객체는 명사나 명사구로
+- 메서드는 동사나 동사구로
+- 좋은 이름을 선택하는 것은 매우 어려운 일이다
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
 
 ```markdown
-
+- 클래스 이름과 객체 이름은 명사나 명사구가 적합하다
+- 메서드 이름은 동사나 동사구가 적합하다
+- 이름에 불필요한 맥락을 추가하지 않도록 주의한다
+- 좋은 이름을 선택하려면 설명 능력이 뛰어나야 하고 문화적인 배경이 같아야 한다
 ```
 
 ### 오늘 읽은 소감은? 떠오르는 생각을 가볍게 적어보세요
 
 ```markdown
-
+맥락을 유지하는 것이 작명에서 가장 중요한 일인 것 같다
+대화를 할 때에도 맥락없이 갑자기 다른 이야기가 튀어나오면 당황스럽듯이 말이다😅
+맥락을 유지하면서 불필요한 글자를 없앤다 즉, 요약을 잘한다와 일맥상통하는 말인 것 같다
+이를 위해서는 어휘력이 좋아야할 것이며 어휘력을 위해서라도 꾸준한 독서를 이어가는 것이 좋을 것 같다
+요즘 책을 잘 읽지 못했는데 다시 책을 읽는 데에도 시간을 좀 더 할애해야겠다
 ```
 
 ### 궁금한 내용이 있거나, 잘 이해되지 않는 내용이 있다면 적어보세요
 
 ```markdown
-
+None
 ```
