노개북 7일차

--- a/nomad development book club/1st: Clean code by robert c. martin/D07.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D07.md
@@ -3,25 +3,27 @@
 ## TL; DR
 
 ```markdown
--
--
--
+- 함수와 인수의 상관관계를 명확하게 이름을 짓자(마치 하나의 문장처럼)
+- 함수는 뭔가 수행하거나 뭔가에 답하거나 둘 중 하나만 해야 한다
+- 함수의 이름이 길어지는 것에 겁내지마라
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
 
 ```markdown
-
+- 단항 함수는 함수와 인수가 동사/명사 쌍을 이뤄야 한다(ex. write(name))
+- 함수는 뭔가를 수행하거나 뭔가에 답하거나 둘 중 하나만 해야 한다
 ```
 
 ### 오늘 읽은 소감은? 떠오르는 생각을 가볍게 적어보세요
 
 ```markdown
-
+함수의 인수와 함수의 이름이 하나의 문장처럼 읽어지는 것은 생각보다 중요한 것 같다
+모호한 개념은 결국 모호한 함수를 남기는 것 같다
 ```
 
 ### 궁금한 내용이 있거나, 잘 이해되지 않는 내용이 있다면 적어보세요
 
 ```markdown
-
+None
 ```
