노개북 11일차

--- a/nomad development book club/1st: Clean code by robert c. martin/D11.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D11.md
@@ -1,7 +1,7 @@
 # 2022.01.31. Mon `(Mission: fix the ugly code)`
 
-
 ### ugly code
+
 ```js
 const merry = document.querySelector(".js-clock");
 
@@ -30,6 +30,50 @@ setInterval(getClock, 1000);
 ```
 
 ### clean code
-```js
 
+```js
+function printDDay({ days, hours, minutes, seconds }) {
+  const dDayElement = document.querySelector(".js-clock");
+
+  dDayElement.innerText = `${days}d ${hours}h ${minutes} ${seconds}s`;
+}
+
+function convertToTwoDigits({ days, hours, minutes, seconds }) {
+  const convertedDays = String(days).padStart(2, "0");
+  const convertedHours = String(hours).padStart(2, "0");
+  const convertedMinutes = String(minutes).padStart(2, "0");
+  const convertedSeconds = String(seconds).padStart(2, "0");
+
+  return {
+    days: convertedDays,
+    hours: convertedHours,
+    minutes: convertedMinutes,
+    seconds: convertedSeconds,
+  };
+}
+
+function getDateToXmas() {
+  const SECOND = 1000;
+  const MINUTE = 60 * SECOND;
+  const HOUR = 60 * MINUTE;
+  const DAY = 24 * HOUR;
+
+  const today = new Date();
+  const xmas = new Date(`${today.getFullYear()}-12-25`);
+  const gap = xmas - today;
+  const days = Math.floor(gap / DAY);
+  const hours = Math.floor((gap % DAY) / HOUR);
+  const minutes = Math.floor((gap % HOUR) / MINUTE);
+  const seconds = Math.floor((gap % MINUTE) / SECOND);
+
+  return {
+    days,
+    hours,
+    minutes,
+    seconds,
+  };
+}
+
+printDDay();
+setTimeout(printDDay, 1000);
 ```
