--- a/nomad development book club/1st: Clean code by robert c. martin/D10.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D10.md
@@ -15,7 +15,7 @@
 - 개념은 빈행으로 구분하라
 - 서로 밀접한 개념은 세로로 가까이 둬야 한다
 - 변수는 사용하는 위치에 최대한 가까이 선언한다
-- 가능하다면 호출하는 함수를 호출되는 함수보다 ㅁ너저 배치한다
+- 가능하다면 호출하는 함수를 호출되는 함수보다 먼저 배치한다
 - 팀이 있다면 한 가지 규칙에 합의하여 그 규칙을 따라야 한다
 ```
 
