노개북 17일차

--- a/nomad development book club/1st: Clean code by robert c. martin/D17.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D17.md
@@ -3,23 +3,33 @@
 ## TL; DR
 
 ```markdown
--
--
--
+- 테스트 코드를 짤때에는 TDD법칙 세 가지를 잊지말자
+- 테스트 코드는 실제 코드와 동일한 수준으로 깔끔하게 작성해야 한다
+- 테스트 코드가 난해(난잡)하다면 결국 폐기되어 그간의 노력이 헛수고가 될 것이다
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
 
 ```markdown
+- TDD법칙 세 가지
+- 1. 실패하는 단위 테스트를 작성할 때까지 실제 코드를 작성하지 않는다
+- 2. 컴파일을 실패하지 않으면서 실행이 실패하는 정도로만 단위 테스트를 작성한다
+- 3. 현재 실패하는 테스트를 통과할 정도로만 실제 코드를 작성한다
+- 테스트 코드는 실제 코드 못지 않게 중요하다
+
 ```
 
 ### 오늘 읽은 소감은? 떠오르는 생각을 가볍게 적어보세요
 
 ```markdown
+아직 TDD를 해본적은 없다
+테스트를 어떤식으로 진행해야 될지도 모르겠고 예시를 찾아본적도 없기 때문이다
+2월 취준이 목표라 마음이 급해 더 그러한 시간들이 부족하다고 느끼지만 이는 반드시 주니어 개발자가 넘어야 할 산이라고 생각한다
+TDD에 대한 개념을 익히고 이를 실제 코드에 준하게 작성하는 연습을 해야겠다
 ```
 
 ### 궁금한 내용이 있거나, 잘 이해되지 않는 내용이 있다면 적어보세요
 
 ```markdown
-None
+실제 TDD 코드의 예시를 찾아보고 이에 대한 필요성을 더 느껴봐야 겠다
 ```
