--- a/nomad development book club/1st: Clean code by robert c. martin/D21.md
+++ b/nomad development book club/1st: Clean code by robert c. martin/D21.md
@@ -3,21 +3,34 @@
 ## TL; DR
 
 ```markdown
--
--
--
+- 요구사항이 변하면 코드도 변한다. 변화에 민감하지 않은 코드를 짜자
+- 응집도를 높여 클래스 내부의 변수와 메서드가 서로 의존적이게 만들자
+- 결합도를 낮춰 클래스 간 서로 변화의 영향을 적게 받도록 하자
 ```
 
 ### 책에서 기억하고 싶은 내용을 써보세요
 
 ```markdown
-
+- 클래스는 인스턴스 변수 수가 작아야 한다
+- 우리는 응집도가 높은 클래스를 선호한다
+- 응집도가 높다는 말은 클래스에 속한 메서드와 변수가 서로 의존하며 논리적인 단위로 묶인다는 말이다
+- 리펙터링한 프로그램은 좀 더 길고 서술적인 변수 이름을 사용한다
+- 가독성을 높이고자 공백을 추가하고 형식을 맞춘다 
+- 깨끗한 시스템은 클래스를 체계적으로 정리해 변경에 수반하는 위험을 낮춘다
+- 요구사항은 변하기 마련이다. 따라서 코드도 변하기 마련이다 
 ```
 
 ### 오늘 읽은 소감은? 떠오르는 생각을 가볍게 적어보세요
 
 ```markdown
-
+'요구사항이 변하면 코드도 변한다'이 말이 와닿는다
+SI회사에서 일하는 친구가 한명있는데 그 친구가 항상 하는 말이 '시간이 부족해서 코드가 누더기가 된다'였다
+자기도 원인을 알지만 그 원인을 원초적으로 수정할 시간이 없다는 말이다
+그 얘기를 들을 때에는 회사가 충분한 시간을 부여해주지 않았다고 생각했다
+하지만 프로그래머들이 충분히 깨끗한 코드를 짜지 못했기 때문이기도 하다
+지금 그 굴레에서 벗어나지 못한다면 아마 영원히 더 복잡한 코드를 짜게 되는 날이 언젠간 올 것이다
+책의 초반부에서 말했든 의외로 책임자들은 불편한 진실을 좋아한다
+이를 유념하도록 하자
 ```
 
 ### 궁금한 내용이 있거나, 잘 이해되지 않는 내용이 있다면 적어보세요
